# fastapi-matrixflow

./: .env.example  .gitignore  pyproject.toml
alembic/: env.py
alembic/versions/: 0f45848433d1_modify_matrix_flows_table_add_column_.py  499903593ef0_matrix_flow_table_add_column_created_at_.py  6796a58504e1_add_user_table.py  898628e89c93_init_matrixflow_db.py  a9bcc409e93c_add_matrix_flow.py  c3e2869b51ac_add_password_to_user_table.py  cebd646dd7b6_add_matrix_flow_table.py
app/: database.py  main.py  settings.py
app/api/: dep.py  main.py
app/api/routes/: matrix_flow.py  matrix_workflow.py  signin.py  user.py
app/core/: security.py
app/core/matrix_workflow/graph/: graph.py  graph_engine.py
app/core/matrix_workflow/nodes/: node_type.py  node_type_class_mapping.py
app/core/matrix_workflow/nodes/add/: add_node.py
app/core/matrix_workflow/nodes/base/: base_node.py
app/core/matrix_workflow/nodes/end/: end_node.py
app/core/matrix_workflow/nodes/minus/: minus_node.py
app/core/matrix_workflow/nodes/start/: start_node.py
app/core/matrix_workflow/workflow_runner/: runner.py
app/core/matrix_workflow/workflow_runner/variables/: variable_pool.py
app/crud/: matrix_flow.py  matrix_workflow.py  user.py
app/db/: database.py
app/models/: __init__.py  matrix_flow.py  matrix_workflow.py  user.py
app/schemas/: api.py  matrix_flow.py  matrix_workflow.py  token.py  user.py
app/services/: matrix_workflow.py
docker/: db-docker-compose.yaml
